--- a/IndianNameSuggester/res/values/strings.xml
+++ b/IndianNameSuggester/res/values/strings.xml
@@ -56,5 +56,6 @@ It would be pleasure if any parent found it useful for their child Name searchin
 Thanks for downloading.
 	
 	</string>
+    <string name="copy_database">copy_database</string>
 
 </resources>
